Fix button centered problem on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,6 @@ footer {
 
     .modal-body .input-container button { 
         font-size: 17px;
-        display: block;
         margin: 10px auto 20px auto;
         padding-top: 10px;
         padding-bottom: 10px;
